[package]
name = "flash-loan"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
program = []
no-entrypoint = []
custom-heap = []
custom-panick = []

[dependencies]
solana-program = "^1.6.10"
spl-token = { version = "^3", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
borsh = "1.5.0"
thiserror = "1.0"
shank = "0.4.3"

[dev-dependencies]
litesvm = "=0.2.1"
solana-sdk = "^1.9.18"
